--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "axios": "^0.18.0",
     "axios-pro": "^1.0.0",
     "express": "^4.16.4",
+    "highlight.js": "^9.15.6",
     "http-proxy-middleware": "^0.19.1",
+    "markdown-it": "^8.4.2",
+    "markdown-it-anchor": "^5.0.2",
+    "markdown-it-attrs": "^2.3.2",
+    "markdown-it-playground": "0.0.5",
+    "markdown-it-table-of-contents": "^0.4.3",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
