--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "axios-pro": "^1.0.0",
     "express": "^4.16.4",
+    "github-markdown-css": "^3.0.1",
     "highlight.js": "^9.15.6",
     "http-proxy-middleware": "^0.19.1",
     "markdown-it": "^8.4.2",
