--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node server"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "axios-pro": "^1.0.0",
     "express": "^4.16.4",
     "github-markdown-css": "^3.0.1",
@@ -22,6 +22,7 @@
     "markdown-it-playground": "0.0.5",
     "markdown-it-table-of-contents": "^0.4.3",
     "vue": "^2.5.17",
+    "vue-markdown-it-toc": "file:../../github/vue/vue-markdown-it-toc",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -38,6 +39,8 @@
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "lint-staged": "^7.2.2",
     "node-sass": "^4.9.0",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
     "sass-loader": "^7.0.1",
     "style-resources-loader": "^1.2.1",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
