--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chai": "^4.1.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
+    "gh-pages": "^2.1.1",
     "lint-staged": "^7.2.2",
     "node-sass": "^4.9.0",
     "postcss-import": "^12.0.1",
