--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "markdown-it-playground": "0.0.5",
     "markdown-it-table-of-contents": "^0.4.3",
     "vue": "^2.5.17",
-    "vue-markdown-it-toc": "file:../../github/vue/vue-markdown-it-toc",
+    "vue-markdown-it-toc": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
