--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "start": "node server",
-    "publish": "node deploy.js"
+    "publish": "vue-cli-service build && node deploy.js"
   },
   "dependencies": {
     "axios": "^0.18.1",
