--- a/package.json
+++ b/package.json
@@ -11,43 +11,43 @@
     "publish": "vue-cli-service build && node deploy.js"
   },
   "dependencies": {
-    "axios": "^0.18.1",
-    "axios-pro": "^1.0.0",
-    "express": "^4.16.4",
+    "axios": "^0.19.0",
+    "axios-pro": "^1.0.43",
+    "express": "^4.17.1",
     "github-markdown-css": "^3.0.1",
-    "highlight.js": "^9.15.6",
-    "http-proxy-middleware": "^0.19.1",
-    "markdown-it": "^8.4.2",
-    "markdown-it-anchor": "^5.0.2",
-    "markdown-it-attrs": "^2.3.2",
+    "highlight.js": "^9.15.10",
+    "http-proxy-middleware": "^0.20.0",
+    "markdown-it": "^10.0.0",
+    "markdown-it-anchor": "^5.2.4",
+    "markdown-it-attrs": "^3.0.1",
     "markdown-it-playground": "0.0.5",
     "markdown-it-table-of-contents": "^0.4.4",
-    "vue": "^2.5.17",
-    "vue-markdown-it-toc": "^1.0.8",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue": "^2.6.10",
+    "vue-markdown-it-toc": "^1.0.9",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-eslint": "^3.1.4",
-    "@vue/cli-plugin-unit-mocha": "^3.1.1",
-    "@vue/cli-service": "^3.1.2",
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-plugin-unit-mocha": "^3.11.0",
+    "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.20",
-    "babel-eslint": "^10.0.1",
-    "chai": "^4.1.2",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-beta.3",
+    "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-eslint": "^10.0.3",
+    "chai": "^4.2.0",
+    "eslint": "^6.5.1",
+    "eslint-plugin-vue": "^5.2.3",
     "gh-pages": "^2.1.1",
-    "lint-staged": "^7.2.2",
-    "node-sass": "^4.9.0",
+    "lint-staged": "^9.4.2",
+    "node-sass": "^4.12.0",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
-    "sass-loader": "^7.0.1",
+    "sass-loader": "^8.0.0",
     "style-resources-loader": "^1.2.1",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
-    "vue-svg-loader": "^0.11.0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-svg-loader": "^0.12.0",
+    "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
